Avances registro perfil y propuesta

--- a/src/main/resources/static/css/perfil.css
+++ b/src/main/resources/static/css/perfil.css
@@ -110,6 +110,11 @@ form{
   align-items: center;
 }
 
+#imagen-perfil{
+	  width:15em;
+}
+
+
 .tags {
     border: 1px solid deepskyblue;
     padding: 4px;
