--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -100,9 +100,10 @@
     </footer>
 
     <!-- PAGINATION-->
-    <div th:fragment="pagination(numeroPaginas)" class="w3-center w3-padding-32">
+    <div th:fragment="pagination" class="w3-center w3-padding-32">
+
         <div class="w3-bar">
-        <th:block th:each="i: ${#numbers.sequence(0,${numeroPaginas}-1)}">
+        <th:block th:each="i: ${#numbers.sequence(0,numeroPaginas-1)}">
             <a class="w3-bar-item w3-button w3-hover-blue botonPaginacion" th:text="${i+1}" th:attr="data-prop-indice=${i+1},data-prop-patron=${patron}">No funciona</a>
         </th:block>	
         </div>
