--- a/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
@@ -6,7 +6,7 @@
 			<!-- Imagen-->
 			<div class="imagen" th:attr="data-id=${u.id}">
 				<img src="https://www.pngkey.com/png/full/230-2301779_best-classified-apps-default-user-profile.png"
-					class="w3-hover-opacity">
+					class="w3-hover-opacity imgPerfilBusqueda">
 			</div>
 
 			<!-- Nombre Usuario -->
@@ -36,14 +36,4 @@
 
 
 <!-- Pagination -->
-<div class="w3-center w3-padding-32">
-	<div class="w3-bar" >
-		<th:block th:each="i: ${#numbers.sequence(0,numeroPaginas-1)}">
-			<a class="w3-bar-item w3-button w3-hover-cyan botonPaginacion" th:text="${i+1}" th:attr="data-prop-indice=${i+1},data-prop-patron=${patron}">No funciona</a>
-		</th:block>				
-	</div>
-</div>
-
-<!-- Pagination --
-<div th:replace="fragments/navigation.html :: pagination(numeroPaginas=${numeroPaginas})"></div>
--->
+<div th:replace="fragments/navigation.html :: pagination"></div>
