--- a/src/main/resources/templates/contrataciones.html
+++ b/src/main/resources/templates/contrataciones.html
@@ -19,7 +19,7 @@
 
 		<!-- !PAGE CONTENT! -->
 		<div id="divBusquedaContrataciones">
-			<input type="text" placeholder="Search.." id="inputBusquedaContrataciones">
+			<input type="text" placeholder="Search.." id="cuadroBusquedaTagBar">
 		</div>
 		<div id = "divContrataciones">
 			<h2 style="margin: 2%;" th:if="${not #lists.isEmpty(candidaturasEnVigor)}">Contrataciones en vigor</h2>
