--- a/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
@@ -5,7 +5,7 @@
 			
 			<!-- Imagen-->
 			<div class="imagen" th:attr="data-id=${u.id}">
-				<img src="https://www.pngkey.com/png/full/230-2301779_best-classified-apps-default-user-profile.png"
+				<img src="img/profile.png"
 					class="w3-hover-opacity imgPerfilBusqueda">
 			</div>
 
