--- a/src/main/resources/templates/fragments/resultadoBusquedaContrataciones.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaContrataciones.html
@@ -40,7 +40,7 @@
 								pharetra nec, mattis ac neque. Duis vulputate commodo lectus...</p>
 						</div>
 						<div style="text-align:center;">
-							<button class="btn">Detalles</button>
+							<button class="boton">Detalles</button>
 						</div>
 
 					</div>
