--- a/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
@@ -28,7 +28,7 @@
 			<p th:text="${u.estado}">Praesent tincidunt sed tellus ut rutrum.</p>
 
 			<!-- Detalles-->
-			<button class="btn btnDetalles" th:attr="data-id=${u.id}">Detalles</button>
+			<button class="boton btnDetalles" th:attr="data-id=${u.id}">Detalles</button>
 
 		</div>
 	</div>
