--- a/src/main/resources/templates/fragments/resultadoBusquedaPropuestas.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPropuestas.html
@@ -31,7 +31,7 @@
 			<p th:text="${prop.descripcion}">Praesent tincidunt sed tellus ut rutrum.</p>
 
 			<!-- Detalles-->
-			<button class="btn btnDetalles" th:attr="data-id=${prop.id}">Detalles</button>
+			<button class="boton btnDetalles" th:attr="data-id=${prop.id}">Detalles</button>
 
 		</div>		
 	</div>
