--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,31 +2,27 @@
 
 <head>
   <th:block th:replace="fragments/head.html :: header" />
-  <title>Login</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-  <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous">
   <script src="js/login.js" type="text/javascript"></script>
+  <title>Login</title>
 </head>
 
-<body>
+<body class="bodyLogin">
   <div class="container">
     <p class="logo w3-display-center">INFLUENCING</p>
-    <form class="form-signin w3-panel w3-round w3-white" method="post" th:action="@{/login}">
+    <form class="formLogin w3-round w3-white" method="post" th:action="@{/login}">
       <h3>Introduce nombre de usuario y contraseña</h3>
       <p>
-        <label for="username" class="sr-only">Username</label>
-        <input type="text" id="username" name="username" class="form-control" placeholder="Username" required=""
-          autofocus="">
+        <input type="text" id="username" name="username" class="w3-input w3-animate-input" placeholder="Usuario" required=""autofocus="">
       </p>
       <p>
-        <label for="password" class="sr-only">Password</label>
-        <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="">
+        <input type="password" id="password" name="password" class="w3-input w3-animate-input" placeholder="Contraseña" required="">
       </p>
-      <button class="btn" type="submit">Entrar</button>
+      <button class="boton" type="submit">Entrar</button>
     </form>
-    <span id="registroLogin">Registro</span>
+    <a id="registroLogin"><u>Registro</u></a>
   </div>
+
+  <!-- Modal de Registro-->
   <div th:replace="fragments/modal.html"></div>
 
 </body>
