--- a/src/main/resources/templates/administracion.html
+++ b/src/main/resources/templates/administracion.html
@@ -61,9 +61,9 @@
                                     <p th:text="${perfil.nombre} - {$perfil.roles} ({$perfil.estado})"> Nombre de perfil
                                         - Tipo perfil (no verificado)</p>
                                     <div class="botonesAdmin">
-                                        <a href="" class="boton">Editar usuario</a>
-                                        <a href="" class="boton">Bloquear usuario</a>
-                                        <a href="" class="boton">Verificar usuario</a>
+                                        <a href="" class="w3-btn btnColor w3-margin">Editar usuario</a>
+                                        <a href="" class="w3-btn btnColor w3-margin">Bloquear usuario</a>
+                                        <a href="" class="w3-btn btnColor w3-margin">Verificar usuario</a>
                                     </div>
                                 </div>
                             </div>
