--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -99,7 +99,7 @@
         </div>
     </footer>
 
-    <!-- PAGINATION-->
+    <!-- PAGINACION-->
     <div th:fragment="pagination" class="w3-center w3-padding-32">
 
         <div class="w3-bar">
