--- a/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
@@ -28,12 +28,12 @@
 			<p th:text="${u.estado}">Praesent tincidunt sed tellus ut rutrum.</p>
 
 			<!-- Detalles-->
-			<button class="boton btnDetalles" th:attr="data-id=${u.id}">Detalles</button>
+			<button class="w3-btn btnColor w3-margin btnDetalles" th:attr="data-id=${u.id}">Detalles</button>
 
 		</div>
 	</div>
 </div>
 
 
-<!-- Pagination -->
+<!-- Paginacion -->
 <div th:replace="fragments/navigation.html :: pagination"></div>
