--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -32,7 +32,7 @@
 				<input class="rounded_corner" type="submit" value="Buscar">
 				</div>
 				<div th:if="${session.u.hasRole('EMPRESA')}" class="divBotonPublicar">
-					<button class="boton" id="botonCrearPropuesta">Crear propuesta</button>
+					<button class="w3-btn btnColor w3-margin" id="botonCrearPropuesta">Crear propuesta</button>
 				</div>
 			</div>
 		</div>
@@ -40,16 +40,16 @@
 		<div id="messages" class="messages_panel w3-third w3-container">
 				<div class="content">
 					<h2> Mensajes recientes</h2>
-					<button class="boton">Ver todos los mensajes</button>
+					<button class="w3-btn btnColor w3-margin">Ver todos los mensajes</button>
 					<div th:each="mensaje : ${mensajes}" id="message1" class="dark_block">
 						<div class="content">	
 							<p th:text="${mensaje.getSender().getNombre() +': '+ mensaje.getText()}">Emisor + Mensaje</p>
 							</br>
 							</br>
-							<div class="button_row">
-								<button class="boton btn-row">Marcar como leído</button>
-                    			<button class="boton btn-row middle_button">Eliminar mensaje</button>
-                    			<button class="boton btn-row">Ir a la conversación</button>
+							<div class="w3-row">
+								<button class="w3-btn w3-dark-grey w3-third">Marcar como leído</button>
+                    			<button class="w3-btn w3-dark-grey w3-third">Eliminar mensaje</button>
+                    			<button class="w3-btn w3-dark-grey w3-third">Ir a la conversación</button>
 							</div>
 						</div>	
 					</div>
@@ -60,14 +60,14 @@
 			<div id="proposal_block" class="proposal_block">
 				<div class="content">
 					<h1>Propuestas recientes</h1>
-					<button class="boton" id="verTodasPropuestas">Ver todas las propuestas</button>
+					<button class="w3-btn btnColor w3-margin" id="verTodasPropuestas">Ver todas las propuestas</button>
 						<div th:each="candidatura : ${candidaturas}" id="proposal1" class="dark_block">
-						<div class="content">
+						<div class="content w3-container">
 							<p th:text="${candidatura.getPropuesta().getEmpresa().getNombre() +': '+ candidatura.getPropuesta().getDescripcion()}">Creador de la propuesta + Descripcion</p>
-                			<div id="button_row_message" class="button_row">
-                    			<button class="button btn-row btnVerPropuesta" th:attr="data-id=${candidatura.propuesta.id}">Ver la propuesta</button>
-                    			<button class="button btn-row middle_button">Abandonar propuesta</button>
-                    			<button class="button btn-row">Contactar</button>
+                			<div class="w3-row">
+                    			<button class="w3-btn w3-dark-grey w3-third" th:attr="data-id=${candidatura.propuesta.id}">Ver la propuesta</button>
+                    			<button class="w3-btn w3-dark-grey w3-third">Abandonar propuesta</button>
+                    			<button class="w3-btn w3-dark-grey w3-third">Contactar</button>
                 			</div>
 						</div>	
 					</div>
@@ -76,13 +76,12 @@
 		</div>
 	</div>
  
-    <!------------------------------Footer area--------------------------------->
-	<div>
-	<footer th:replace="fragments/navigation.html :: footer"></footer>
-	</div>
-
-
-		<div th:replace="fragments/modal.html"></div>
+    
+	<!-- Footer -->
+    <footer th:replace="fragments/navigation.html :: footer"></footer>
+    
+    <!-- Modal -->
+    <div th:replace="fragments/modal.html"></div>
 
 </body>
 
