--- a/src/main/resources/templates/modals/notificaciones.html
+++ b/src/main/resources/templates/modals/notificaciones.html
@@ -18,24 +18,25 @@
         <div th:replace="fragments/navigation.html :: modalBar(nombrePagina='NOTIFICACIONES')"></div>
       </header>
 
+      <!-- Lista de notificaciones -->
       <div class="w3-container" th:each="notificacion: ${notificaciones}">
-        <!-- First Notification Grid-->
-
 
         <div class="w3-card-4 w3-round w3-margin-top w3-margin-bottom">
-          <div class="w3-container w3-pale-blue w3-button w3-large w3-right"
-            onclick="this.parentElement.style.display='none'">X</div>
+
+          <!-- Boton eliminar-->
+          <div class="w3-container w3-pale-blue w3-button w3-large w3-right" onclick="this.parentElement.style.display='none'">X</div>
+          
+          <!-- Descripcion -->
           <div class="w3-container w3-pale-blue w3-row w3-center">
             <h1 th:text="${notificacion.descripcion}">Descripcion de la notificacion</h1>
           </div>
 
+          <!-- Fecha enviado -->
           <div class="w3-container w3-pale-blue w3-center">
             <p th:text="${notificacion.fechaEnviado}">Aqui va la fecha</p>
           </div>
         </div>
 
-
-        <!-- End page content -->
       </div>
 
   </body>
