--- a/src/main/resources/templates/negociacion.html
+++ b/src/main/resources/templates/negociacion.html
@@ -14,6 +14,8 @@
     <header>
         <div th:replace="fragments/navigation.html :: navBar(nombrePagina='CHAT DE NEGOCIACIÓN')"></div>
     </header>
+
+    <!-- Contenido chat de negociacion -->
     <main>
         <div class="contenido-negociacion">
 
@@ -35,7 +37,7 @@
                         <a class="nombre"></a>
                     </div>
                     <div class="ultimatum">
-                        <button class="btn" id="botonUltimatum">Enviar Ultimatum</button>
+                        <button class="w3-btn w3-black w3-margin" id="botonUltimatum">Enviar Ultimatum</button>
                     </div>
                 </div>
                 <div id="contenidoChat">
@@ -45,19 +47,14 @@
             </div>
         </div>
 
-
-        <div id="modal" class="w3-modal">
-            <div class="w3-modal-content">
-                <div id="contenidoModal"></div>
-            </div>
-        </div>
-
-
-
     </main>
-    <div th:replace="fragments/navigation.html :: footer"></div>
+
+    <!-- Footer -->
+    <footer th:replace="fragments/navigation.html :: footer"></footer>
+    
+    <!-- Modal -->
+    <div th:replace="fragments/modal.html"></div>
+    
 </body>
-
-
 
 </html>
