--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -18,7 +18,7 @@
 	</header>
     <!--   Cuerpo de la web  -->
 
-	<div id="page_block" class="w3-row-padding global-div">
+	<div id="page_block" class="w3-row-padding global-div generalWebBody">
 		<div id= "left_panel" class="w3-third w3-container">
 			<div id="control_panel" class="control_panel">
 				<div id="content" class="content">
@@ -43,7 +43,7 @@
 					<button class="w3-btn btnColor w3-margin">Ver todos los mensajes</button>
 					<div th:each="mensaje : ${mensajes}" id="message1" class="dark_block">
 						<div class="content">	
-							<p th:text="${mensaje.getSender().getNombre() +': '+ mensaje.getText()}">Emisor + Mensaje</p>
+							<p th:text="${mensaje.getEmisor().getNombre() +': '+ mensaje.getDescripcion()}">Emisor + Mensaje</p>
 							</br>
 							</br>
 							<div class="w3-row">
